--- a/Property FW and wreath products/Bouts/Definitions.tex
+++ b/Property FW and wreath products/Bouts/Definitions.tex
@@ -17,7 +17,7 @@
 \section{Definitions and examples}
 
 
-This section contains all the definitions, some standard but usefull preliminary results as well as some examples.
+This section contains all the definitions, some standard but useful preliminary results as well as some examples.
 % and can be found in any good book about geometric group theory, see for example~\cite{DelaHarpe2000}.\todo{Peut-être retravailler l'intro.}
 %
 %
@@ -53,11 +53,11 @@ Let $G$ be a group, $H$ a subgroup of $G$ and $S$ a symmetric generating set. Th
 Observe that with the above definition, a Schreier graph may have loops as well as multiple edges. Moreover, in $\Sch(G,H;S)$ every vertex has degree $\abs S$.
 
 If $X$ is a set with a left action $G\curvearrowright X$ and $S$ is a symmetric generating set for $G$, the corresponding (left) \emph{orbital graph} $\Sch_{\mathcal O}(G,X;S)$ is the graph with vertex set $X$ and with an edge between $x$ and $y$ for every $s$ in $S$ such that $s.x=y$.
-As the notation suggest, these two definitions are the two faces of the same coin. Indeed, we have $\Sch(G,H;S)=\Sch_{\mathcal O}(G,G/H;S)$ for the  action by left multiplication of $G$ on $G/H$, while   for every $x\in X$, the graph $\Sch(G,\stab_G(x);S)$ is equal to the connected component of $x$ in $\Sch_{\mathcal O}(G,X;S)$.
+As the notation suggests, these two definitions are two faces of the same coin. Indeed, we have $\Sch(G,H;S)=\Sch_{\mathcal O}(G,G/H;S)$ for the  action by left multiplication of $G$ on $G/H$, while   for every $x\in X$, the graph $\Sch(G,\stab_G(x);S)$ is equal to the connected component of $x$ in $\Sch_{\mathcal O}(G,X;S)$.
 
 Schreier graphs are generalizations of the well-known \emph{Cayley graphs}, with $\Cayley(G;S)=\Sch(G,\{1\};S)$, see Figures \ref{Figure:CayleyOfZ} and \ref{Figure:CayleyOfZ2} for some examples.
 
-If $S$ and $T$ are two generating sets of $G$, the graphs $\Sch(G,H;S)$ and $\Sch(G,H;T)$ need not to be isomorphic. However, if both $S$ and $T$ are finite, then $\Sch(G,H;S)$ and $\Sch(G,H;T)$ are quasi-isometric, see \cite[IV.B.21.iii]{DelaHarpe2000} for a proof and Figure~\ref{Figure:CayleyOfZ} for an example. The only fact we will use about quasi-isometries is that they preserve ``large-scale properties'' of the graph, as for example the number of ends.
+If $S$ and $T$ are two generating sets of $G$, the graphs $\Sch(G,H;S)$ and $\Sch(G,H;T)$ does not need to be isomorphic. However, if both $S$ and $T$ are finite, then $\Sch(G,H;S)$ and $\Sch(G,H;T)$ are quasi-isometric, see \cite[IV.B.21.iii]{DelaHarpe2000} for a proof and Figure~\ref{Figure:CayleyOfZ} for an example. The only fact we will use about quasi-isometries is that they preserve ``large-scale properties'' of the graph, as for example the number of ends.
 Observe that the requirement that both $S$ and $T$ are finite is crucial for the existence of a quasi-isometry between the corresponding Schreier graphs. Indeed, for every group  $\Cayley(G;G\setminus\{1\})=\Sch(G,\{1\};G\setminus\{1\})$ is always a complete graph on $\abs{G}$ vertices, in particular  $\Cayley(\Z;\{1\})$ and $\Cayley(\Z;\Z\setminus\{0\})$ are not quasi-isometric.
 
 %
@@ -93,7 +93,7 @@ Let $\Gamma$ be a graph and $K$ a finite subset of vertices. The graph $\Gamma\s
 \begin{defn}\label{Def:Ends}
 Let $\Gamma$ be a graph. The \emph{number of ends} of $\Gamma$ is the supremum, taken over all finite $K$, of the number of infinite connected components of $\Gamma\setminus K$.
 \end{defn}
-There exists other characterization of the number of ends in graphs, %notably in terms of equivalence classes of rays,
+There exists other characterizations of the number of ends in graphs, %notably in terms of equivalence classes of rays,
 see \cite{MR1967888} and the references therein, but Definition \ref{Def:Ends} is the one that best suits our purpose.
 %The interested reader may refer to \cite{MR1967888} and the references therein for an extended treatment of the
 A locally finite graph (i.e. such that every vertex has finite degree) is finite if and only if it has $0$ end.
@@ -105,7 +105,7 @@ On the other hand, Schreier graphs may have any number of ends in $\mathbf N\cup
 %While the number of ends of Cayley graphs of finitely generated groups can only be $0$, $1$, $2$ or infinite (in which case it is uncountable) \cite[Theorem 11.27]{Stallings1971}, Schreier graphs may have any number of ends in $\mathbf N\cup\{\infty\}$, see Figure~\ref{Figure:SchreierOfF2} for an example of a graph with another number of ends.
 In fact, every regular graph of even degree is isomorphic to a Schreier graph, \cite{MR0450121,MR1358635}.
 
-We are now finally able to introduce property FW. Insteed of giving the original definition in terms of actions on wall spaces, we will use an equivalent one for finitely generated group due to Cornulier \cite{Cornulier2013}.
+We are now finally able to introduce property FW. Instead of giving the original definition in terms of actions on wall spaces, we will use an equivalent one for finitely generated groups due to Cornulier \cite{Cornulier2013}.
 %
 %
 \begin{defn}
@@ -114,7 +114,7 @@ A finitely generated group $G$ has \emph{property FW} if all its Schreier graphs
 %
 %
 It directly follows from the definition that all finite groups have property FW, but that $\Z$ does not have it.
-In fact, if $G$ is a finitely generated group with an homomorphism onto $\Z$, then it does not have FW. Indeed, in this case $G\cong H\rtimes \Z$  for some $H$ and the Schreier graph $\Sch(G,H;S)$ will be isomorphic to a Cayley graph of $\Z\cong G/H$ and hence has $2$ ends.
+In fact, if $G$ is a finitely generated group with an homomorphism onto $\Z$, then it does not have FW. Indeed, in this case $G\cong H\rtimes \Z$  for some $H$ and the Schreier graph $\Sch(G,H;S)$ is isomorphic to a Cayley graph of $\Z\cong G/H$ and hence has $2$ ends.
 
 Property FW admits many distinct characterizations that allow to define it for groups that are non-necessarily finitely generated and even for topological groups. We refer the reader to \cite{Cornulier2013} for a survey of these characterizations.
 %
@@ -147,14 +147,14 @@ This is naturally a group, where multiplication is taken componentwise.
 
 If $H$ is a group acting on $X$, then it naturally acts on $\bigoplus_XG$
 by $(h.\varphi)(x)=\varphi(h^{-1}.x)$.
-This leads to the following standard definition
+This leads to the following standard definition.
 \begin{defn}\label{Def:WreathProd}
 Let $G$ and $H$ be groups and $X$ be a set on which $H$ acts.
 The \emph{(retricted) wreath product} $G\wr_XH$ is the group $(\bigoplus_XG)\rtimes H$.
 \end{defn}
-A prominent  source of examples of wreath products are the ones of the form $G\wr_HH$, where $H$ acts on itself by left multiplication.
+A prominent  source of examples of wreath products is the ones of the form $G\wr_HH$, where $H$ acts on itself by left multiplication.
 In particular, the group $(\Z/2\Z)\wr_\Z\Z$ has become well-known under the name of the \emph{lamplighter group}.
-Another (trivial) examples of wreath products are direct products $G\times H$ which corresponds to wreath products over a singleton $G\wr_{\{*\}}H$.
+Other (trivial) examples of wreath products are direct products $G\times H$ which corresponds to wreath products over a singleton $G\wr_{\{*\}}H$.
 
 Let $S$ be a generating set of $G$ and $T$ a generating set of $H$.
 Let $\{x_i\}_{i\in I}$ be a choice of a representative in each $H$-orbit.
@@ -186,7 +186,7 @@ The group $G\wr_XH$ is finitely generated if and only if both $G$ and $H$ are fi
 \end{lem}
 \begin{proof}
 %The only implication that does not directly follows of the discussion above is that if $G\wr_XH$ is finitely generated, then $H$ acts on $X$ with finitely many orbits.
-If $G\wr_XH$ is finitely generated, so is its abelianization $(G\wr_XH)^{\ab}\cong (\bigoplus_{X/H}G^{\ab})\times H^{\ab}$, which implies that the orbit set $X/H$ is finite. The other implications directly follows from the above discussion on generating sets.
+If $G\wr_XH$ is finitely generated, so is its abelianization $(G\wr_XH)^{\ab}\cong (\bigoplus_{X/H}G^{\ab})\times H^{\ab}$, which implies that the orbit set $X/H$ is finite. The other implications directly follow from the above discussion on generating sets.
 \end{proof}
 %
 %
