--- a/Property FW and wreath products/Bouts/Introduction.tex
+++ b/Property FW and wreath products/Bouts/Introduction.tex
@@ -22,7 +22,7 @@
 %
 Property FW is a group property that is (for discrete groups) a weakening of the celebrated Kazdhan's property (T). It was introduced by Barnhill and Chatterji in \cite{Barnhill2008}. It is a fixed point property for actions on wall spaces or, equivalently, on CAT(0) cube complexes. Therefore it stands between property FH (fixed points on Hilbert spaces, equivalent to property (T) for discrete groups) and property FA (fixed points on \emph{arbres}\footnote{\emph{Arbres} is the french word for trees.}). It is known that all these properties are different, see  \cite{Cornulier2013} for examples of groups which distinguish them.
 
-When working with group properties, it is natural to ask if they are stable under ``natural'' group operations. One such operation, of great use in geometric group theory, is the wreath product, see Definition~\ref{Def:WreathProd}, which generalizes the direct product of two groups.
+When working with group properties, it is natural to ask if they are stable under ``natural'' group operations. One such operation, of great use in geometric group theory, is the wreath product, which generalizes the direct product of two groups, see Definition~\ref{Def:WreathProd}.
 %\todo{Est ce que c'est écrit quelques part les preuves pour cela ? Si oui citer si non les écrire pour être complet}
 %A slightly less common operation, but still of great use in geometric group theory, is the wreath product, see Definition~\ref{Def:WreathProd}.
 %\todo[inline]{Comme dit dans le mail, la stabilité par sous-groupe et produit semi-direct est fausse (cf \cite{Cornulier2013} et les références dedans pour des examples). Dans la suite, on (re)montre que c'est stable par quotient et produit direct (\cite{Cornulier2013} montre que pour $1\to N\to G\to H\to 1$ on a $G$ a FW ssi $H$ a FW et $(G,N)$ a relatif FW; ça implique la stabilité par produit et quotient.)
@@ -49,7 +49,7 @@ Let $G,H$ be two finitely generated groups with $G$ non-trivial and $X$ a set on
 Our proof will rely on a characterization of property FW via ends of Schreier graphs, see Subsection \ref{Subsection:FW} for the relevant definitions.
 Note that Cornulier also proved in \cite{Cornulier2013} that if $G\wr_XH$ has property FW (and $G$ is non trivial), then $X$ is finite.
 
-Corulier and Kar studied the question of stability of wreath product for property FA in \cite{Cornulier2011}. They proved a similar result if the action of the group $H$ has finitely many orbits and no fixed point. The condition that $G$ has property FA is replaced by $G$ has finite abelization and can not be expressed as a countable union of properly increasing sequence of subgroups. \todo{Peut être mettre une phrase qui explique en quoi c'est différent de FA}
+Corulier and Kar studied the question of stability of wreath product for property FA in \cite{Cornulier2011}. They proved a similar result if the action of the group $H$ has finitely many orbits and no fixed point. The condition that $G$ has property FA is replaced by $G$ has finite abelianization and $G$ can not be expressed as a countable union of properly increasing sequence of subgroups. %\todo{Peut être mettre une phrase qui explique en quoi c'est différent de FA}
 
 %A somewhat similar result for property FA was obtained by Cornulier and Kar in \cite{Cornulier2011}.
 
