--- a/Property FW and wreath products/Bouts/biblio.bib
+++ b/Property FW and wreath products/Bouts/biblio.bib
@@ -6,6 +6,22 @@
 
 %% Saved with string encoding Unicode (UTF-8) 
 
+@article {MR1347406,
+    AUTHOR = {Sageev, Michah},
+     TITLE = {Ends of group pairs and non-positively curved cube complexes},
+   JOURNAL = {Proc. London Math. Soc. (3)},
+  FJOURNAL = {Proceedings of the London Mathematical Society. Third Series},
+    VOLUME = {71},
+      YEAR = {1995},
+    NUMBER = {3},
+     PAGES = {585--617},
+      ISSN = {0024-6115},
+   MRCLASS = {20F32 (20E08)},
+  MRNUMBER = {1347406},
+MRREVIEWER = {G. Peter Scott},
+       DOI = {10.1112/plms/s3-71.3.585},
+       URL = {https://doi.org/10.1112/plms/s3-71.3.585},
+}
 
 @article {MR10267,
     AUTHOR = {Hopf, Heinz},
