--- a/Property FW and wreath products/Medians/Median.tex
+++ b/Property FW and wreath products/Medians/Median.tex
@@ -103,7 +103,7 @@
 %
 %
 \begin{abstract}
-If S is a structure over metric spaces, we say that a group G has property BS if any action on a S-space has bounded orbits. Examples of such structures include metric spaces, Hilbert spaces, CAT(0) cube complexes\todo{Ajout CCC car intêret des gens pour ça}, connected median graphs, trees or ultra-metric spaces.
+If S is a structure over metric spaces, we say that a group G has property BS if any action on a S-space has bounded orbits. Examples of such structures include metric spaces, Hilbert spaces, CAT(0) cube complexes\mycomment[GS]{Ajout CCC car intêret des gens pour ça}, connected median graphs, trees or ultra-metric spaces.
 They correspond respectively to Bergman's property, property FH (which, for countable groups, is equivalent to the celebrated Kazdhan's property (T)), property FW, property FA and cof~$\neq\omega$.
 
 Our main result is that for a large class of structures S, the wreath product $G\wr_XH$ has property BS if and only if both $G$ and $H$ have property BS and $X$ is finite. On one hand, this encompasses in a general setting previously known results for properties FH and FW. On the other hand, this also apply to the Bergman property.
@@ -380,7 +380,7 @@ An infinite finitely generated group with property (T), e.g. $\SL_3(\Z)$, has pr
 The group $\SL_2(\Z[\sqrt{2}])$ has property FW but not FH, see \cite{MR3299841}.
 If $G$ is a non-trivial finite group and $H$ is an infinite finitely generated group with property FW, then every finite index subgroup of $H$ has property FW, Lemma~\ref{Lemma:Subgroup}, \mycomment[GS]{Pourquoi a-t-on besoin des sous-groupes d'indices finis ?}and hence FA, which implies that $G\wr_HH$ has property FA by \cite{Cornulier2011}, but does not have property FW by Theorem~\ref{Thm:Main}.
 %The group $G = \gen{a,b,c  | a^2=b^2=c^2=(ab)^2=(ac)^2=(bc)^2=1}$ has property FA but not property FW see \cite[Example 5.B.8]{Cornulier2013};  
-Finally, $\Z$ has cof~$\neq\omega$ as any finitely generated group \mycomment[GS]{Evident que t.f -> cof~$\neq\omega$  ?}, while it acts by translations and with unbounded orbits on the infinite $2$-regular tree.
+Finally, $\Z$ has cof~$\neq\omega$ as any finitely generated group \mycomment[GS]{Evident que t.f -> cof~$\neq\omega$  ? Sinon on peut peut être ajouter une phrase qui explique pourquoi.}, while it acts by translations and with unbounded orbits on the infinite $2$-regular tree.
 \paragraph{More on median graphs}
 %We now come back to median graphs.
 Trees are the simplest examples of median graphs and a simple verification shows that if $X$ and $Y$ are both (connected) median graphs, then their cartesian product is also a (connected) median graph.
@@ -652,7 +652,7 @@ Suppose that BS implies cof~$\neq\omega$. Then
 \end{enumerate}
 \end{lem}
 \begin{proof}
-By Corollary~\ref{Cor:Prod}, it is enough to prove the first assertion for countable direct sums of groups. Indeed, if $X$ is uncountable, there exists a countable subset $Y \subset X$ and $Z \subset X$ such that $X = Y \sqcup Z$. We can decompose the direct sum as $\bigoplus_XG = \left(\bigoplus_{y \in Y}G_y\right) \times \left(\bigoplus_{z \in Z}G_z\right)$ and then, by Corollary~\ref{Cor:Prod}, if $\bigoplus_{y \in Y}G_y$ does not have cof~$\neq\omega$, then so does $\bigoplus_XG$. \todo{Ajout de l'explication de pourquoi on peut se retreindre au cas dénombrable}
+By Corollary~\ref{Cor:Prod}, it is enough to prove the first assertion for countable direct sums of groups. Indeed, if $X$ is uncountable, there exists a countable subset $Y \subset X$ and $Z \subset X$ such that $X = Y \sqcup Z$. We can decompose the direct sum as $\bigoplus_XG = \left(\bigoplus_{y \in Y}G_y\right) \times \left(\bigoplus_{z \in Z}G_z\right)$ and then, by Corollary~\ref{Cor:Prod}, if $\bigoplus_{y \in Y}G_y$ does not have cof~$\neq\omega$, then so does $\bigoplus_XG$. \mycomment[GS]{Ajout de l'explication de pourquoi on peut se retreindre au cas dénombrable}
 So let $G\coloneqq \bigoplus_{i\geq 1}G_i$ and for each $i$, choose $g_i\neq 1$ in $G_i$.
 Let $d_\infty(f,g)\coloneqq\max\setst{i}{f(i)\neq g(i)}$ be the $G$-invariant ultrametric of Example~\ref{Exmpl:Ultra}.
 Then for every integer $n$, the orbit $G.1_G$ contains $\{g_1,\dots,g_n,1,\dots\}$ which is at distance $n$ of $1_G$ for $d_\infty$ if the $g_i$ are not equal to $1$.
@@ -687,16 +687,15 @@ Let $G$ and $H$ be two groups with $G$ non-trivial and let $X$ be a set on which
 If $G\wr_XH$ has BS, then $X$ is finite.
 \end{lem}
 \begin{proof}
-It is enough to prove the assertion for property FW.
-Suppose that $X$ is infinite.
+We will prove that if $X$ is infinte, then $G\wr_XH$ does not have property FW. Suppose that $X$ is infinite.
 The group $\bigoplus_XG$ acts coordinatewise on  $\bigsqcup_XG$: the group $G_x$ acting by left multiplication on $G_x$ and trivially on $G_y$ for $y\neq x$. On the other hand, $H$ acts on $\bigsqcup_XG$ by permutation of the factors.
 Altogether we have an action of $G\wr_XH$ on $\bigsqcup_XG$ and hence on the median graph $\powerset{\bigsqcup_XG}$.
 Let $\mathbf 1\coloneqq\bigcup_{x\in X} 1_{G}$ be the subset of $\powerset{\bigsqcup_XG}$ consisting of the identity elements of all the copies of $G$.
 Since every element of $\bigoplus_XG$ has only a finite number of non-trivial coordinates, the action of $G\wr_XH$ preserves the connected components of $\mathbf 1$ (and in fact every connected component of $\powerset{\bigsqcup_XG}$).
 
 Let $I=\{i_1,i_2,\dots\}$ be a countable subset of $X$ and for every $i\in I$, choose a non-trivial $g_i\in G_{i}$.
-Then the orbit of the vertex $\mathbf 1$ contains the point $\{g_{i_1},\dots, g_{i_n}\}\cup\bigl(\bigcup_{j>n} 1_{G_{j_i}}\bigr)\cup\bigl(\bigcup_{x\notin I} 1_{G_{x}}\bigr)$ which is at distance $2n$ of~$\mathbf 1$.
-That is the action of $G\wr_XH$ on the connected component of~$\mathbf 1$ has an unbounded orbit.
+Then the orbit of the vertex $\mathbf 1$ contains the point $\{g_{i_1},\dots, g_{i_n}\}\cup\bigl(\bigcup_{j>n} 1_{G_{i_j}}\bigr)\cup\bigl(\bigcup_{x\notin I} 1_{G_{x}}\bigr)$ which is at distance \mycomment[GS]{Pourquoi pas distance $n$ ?}$2n$ of~$\mathbf 1$.
+Therefore the action of $G\wr_XH$ on the connected component of~$\mathbf 1$ has an unbounded orbit and then $G\wr_XH$ does not have property FW.
 \end{proof}
 %
 %
@@ -768,14 +767,14 @@ Then $H$ acts on $X$ and $\orbite$ is a union of at most $[G:H]$ orbits. This di
 
 On the other hand, suppose that $H\leq G$ is a finite index subgroup of G without property BS.
 Let $\alpha\colon H\curvearrowright X$ be an action of $H$ on a S-space $(X,d_X)$ such that there is an unbounded orbit $\orbite$.
-Similarly to the classical theory of representation of finite groups, we have the induced  action $\Ind_H^G(\alpha)\colon G \curvearrowright X^{G/H}$ on the set $X^{G/H}$. Since $H$ has finite index, $X^{G/H}$ is a S-space and the action is by S-automorphisms. On the other hand, the subgroup $H\leq G$ acts diagonally on $X^{G/H}$, which implies that $\diag(\orbite)$ is contained in a $G$-orbit.
+Similarly to the classical theory of representations of finite groups, we have the induced  action $\Ind_H^G(\alpha)\colon G \curvearrowright X^{G/H}$ on the set $X^{G/H}$. Since $H$ has finite index, $X^{G/H}$ is a S-space and the action is by S-automorphisms. On the other hand, the subgroup $H\leq G$ acts diagonally on $X^{G/H}$, which implies that $\diag(\orbite)$ is contained in a $G$-orbit.
 Since $\diag(\orbite)$ is unbounded, $G$ does not have property BS.
 
 For readers that are not familiar with representations of finite groups, here is the above argument in more details.
 Let $(f_i)_{i=1}^n$ be a transversal for $G/H$.
 The natural action of $G$ on $G/H$ gives rise to an action of $G$ on $\{1,\dots,n\}$.
-Hence, for any $g$ in $G$ and $i$ in $\{1,\dots,n\}$ there exists a unique $h_{g,i}$ in $H$ such that $gf_i=f_{g.i}h_{g,i}$. That is, $h_{g,i}=gf_if_{g.i}^{-1}$.
-We then define $g.(x_1,\dots,x_n)\coloneqq(h_{g,g^{-1}.1}.x_{g^{-1}.1},\dots,h_{g,g^{-1}.n}.x_{g^{-1}.n})$. This is indeed an action, which, by Condition~\ref{Item:Product} of Definition~\ref{Def:Cartesian}, is by S-automorphisms of $X^{G/H}$.
+Hence, for any $g$ in $G$ and $i$ in $\{1,\dots,n\}$ there exists a unique $h_{g,i}$ in $H$ such that $gf_i=f_{g.i}h_{g,i}$. That is, $h_{g,i}=f_{g.i}^{-1}gf_i$. \mycomment[GS]{Ok $h_{g,i}=f_{g.i}^{-1}gf_i$ plutôt ?}
+We then define $g.(x_1,\dots,x_n)\coloneqq(h_{g,g^{-1}.1}.x_{g^{-1}.1},\dots,h_{g,g^{-1}.n}.x_{g^{-1}.n})$. This is indeed an action by S-automorphisms on $X^{G/H}$ by Condition~\ref{Item:Product} of Definition~\ref{Def:Cartesian}.
 Moreover, every element $h\in H$ acts diagonally by $h.(x_1,\dots,x_n)=(h.x_1,\dots,h.x_n)$.
 In particular, this $G$ action has an unbounded orbit.
 \end{proof}
@@ -890,7 +889,7 @@ We have
 which implies that the diameter of $G_{x_i}h^{-1}.y$ is bounded by $\max\{D_0,D_i\}$.
 But $G_{x_i}h^{-1}.y$ has the same diameter as $hG_{x_i}h^{-1}.y=G_{h.x_i}.y=G_x.y$.
 
-On the other hand, the diameter of $\bigoplus_XG.y$ is bounded by the supremum of the diameters of the $G_x.y$, and hence bounded by $\max\{D_0,D_1,\dots,D_n\}$.
+On the other hand, the diameter of $\bigoplus_XG.y$ is bounded by the supremum of the diameters of the $G_{x_i}.y$ \mycomment[GS]{OK $G_{x_i}.y$? }, and hence bounded by $\max\{D_0,D_1,\dots,D_n\}$.
 Finally, for $(\varphi,h)$ in $G\wr_YH$ we have
 \begin{align*}
 	d\bigl(y,(\varphi,h).y\bigr)&\leq\max\{d\bigl(y,(\varphi,1).y\bigr),d\bigl((\varphi,1).y,(\varphi,h).y\bigr)\}\\
